# gutshot

./: .gitattributes  .gitignore  README.md  requirements.txt
backend/: main.py  solver.py
frontend/: package-lock.json  package.json
frontend/src/app/: api.ts  page.tsx
frontend/src/app/api/data/: route.ts
frontend/src/components/: NLPInput.tsx  RangeInput.tsx
nlp/: main.py  solver.py
rust/postflop-solver/postflop-solver-py/: Cargo.toml
rust/py-adapt/: Cargo.toml  README.md
rust/py-adapt/src/: lib.rs
tests/: test_py_solver.py
