[package]
name = "postflop_solver_python"
version = "0.1.0"
edition = "2021"

[lib]
name = "postflop_solver_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
postflop-solver = { path = "../postflop-solver" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true